# v8

./: BUILD.gn  CMakeLists.txt  run-benchmark.py
include/: v8-fast-api-calls.h  v8-internal.h  v8-platform.h  v8config.h
src/api/: api.cc
src/ast/: scopes.cc
src/base/: address-region.h  atomic-utils.h  atomicops.h  bits.h  bounded-page-allocator.cc  bounded-page-allocator.h  build_config.h  cpu.cc  flags.h  functional.h  logging.h  macros.h  page-allocator.cc  page-allocator.h  pointer-with-payload.h  region-allocator.cc  virtual-address-space-page-allocator.cc  virtual-address-space-page-allocator.h  virtual-address-space.cc
src/base/platform/: platform-freebsd.cc  platform-posix.cc  platform-posix.h  platform.h
src/base/sanitizer/: lsan-page-allocator.cc  lsan-page-allocator.h
src/baseline/arm64/: baseline-assembler-arm64-inl.h  baseline-assembler-arm64-inl.h.rej.orig  baseline-compiler-arm64-inl.h
src/bigint/: bigint.h  digit-arithmetic.h
src/builtins/: builtins.h  setup-builtins-internal.cc
src/builtins/arm64/: builtins-arm64.cc
src/codegen/: aligned-slot-allocator.h  code-stub-assembler.cc  code-stub-assembler.h  external-reference-table.h  machine-type.cc  machine-type.h  reloc-info.cc
src/codegen/aarch64c/: assembler-aarch64c-inl.h  constants-aarch64c.h  decoder-aarch64c-inl.h  decoder-aarch64c.h  register-aarch64c.h
src/codegen/arm64/: assembler-arm64-inl.h  assembler-arm64.cc  assembler-arm64.h  constants-arm64.h  cpu-arm64.cc  decoder-arm64-inl.h  decoder-arm64.h  instructions-arm64.cc  instructions-arm64.h  interface-descriptors-arm64-inl.h  macro-assembler-arm64-inl.h  macro-assembler-arm64.cc  macro-assembler-arm64.h  register-arm64.h  reglist-arm64.h
src/codegen/x64/: macro-assembler-x64.cc
src/common/: checks.h  cheri.cc  cheri.h  globals.h  ptr-compr-inl.h  ptr-compr.cc  ptr-compr.h
src/compiler/: c-linkage.cc  code-assembler.cc  code-assembler.h  common-operator.cc  effect-control-linearizer.cc  heap-refs.cc  machine-graph.cc  machine-operator.cc  machine-operator.h  opcodes.cc  opcodes.h  operator.h  raw-machine-assembler.cc  raw-machine-assembler.h  simplified-operator.cc  types.h
src/compiler/backend/: instruction-selector-impl.h  instruction-selector.cc  instruction-selector.h  instruction.cc  instruction.h  mid-tier-register-allocator.cc  register-allocation.h
src/d8/: d8-posix.cc  d8.cc
src/debug/: debug.cc
src/diagnostics/: gdb-jit.cc  objects-debug.cc  objects-printer.cc
src/diagnostics/arm64/: disasm-arm64.cc  disasm-arm64.h
src/execution/: frame-constants.h  frames.cc  frames.h  isolate-data.h  isolate.cc  isolate.h  simulator.h  stack-guard.h
src/execution/aarch64c/: simulator-aarch64c.cc
src/execution/arm64/: frame-constants-arm64.cc  frame-constants-arm64.h  simulator-arm64.cc  simulator-arm64.h
src/heap/: basic-memory-chunk.cc  basic-memory-chunk.h  code-range.cc  factory-base.cc  heap-controller.h  heap-inl.h  heap-write-barrier-inl.h  heap.cc  large-spaces.h  mark-compact.cc  marking-visitor-inl.h  memory-allocator.h  memory-chunk-layout.h  memory-chunk.cc  paged-spaces.h  read-only-spaces.cc  remembered-set-inl.h  slot-set.h  spaces-inl.h  spaces.h
src/heap/base/: active-system-pages.h
src/heap/cppgc/: gc-info-table.cc  globals.h  heap-object-header.h  page-memory.cc  virtual-memory.cc
src/init/: isolate-allocator.cc  v8.cc
src/logging/: log-file.h
src/numbers/: integer-literal.h
src/objects/: backing-store.cc  bigint.h  code-inl.h  code.h  elements.cc  embedder-data-slot-inl.h  fixed-array.h  free-space-inl.h  js-array-buffer-inl.h  maybe-object-inl.h  object-macros.h  object-type.cc  objects-body-descriptors-inl.h  objects-inl.h  objects.h  slots-inl.h  slots.h  string.h  tagged-field-inl.h  tagged-field.h  tagged-impl-inl.h  tagged-impl.h
src/sandbox/: external-pointer-table-inl.h  external-pointer-table.cc  external-pointer-table.h  external-pointer.h  sandboxed-pointer-inl.h
src/snapshot/: deserializer.cc  serializer.cc  snapshot-source-sink.h
src/strings/: string-stream.cc  unicode-decoder.h
src/torque/: implementation-visitor.cc  instructions.cc  runtime-macro-shims.h  types.cc
src/tracing/: trace-event.h
src/utils/: allocation.cc  allocation.h  bit-vector.h  sparse-bit-vector.h
src/zone/: accounting-allocator.cc  zone.h
test/cctest/: test-allocation.cc
test/torque/: test-torque.tq
test/unittests/: BUILD.gn
tools/debug_helper/: get-object-properties.cc
(+17 files in other folders)
